--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,25 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<header>
+  <nav>
+    <div class="title"><a href="/">Dinner Assister</a></div>
+    <% if user_signed_in? %>
+      Logged in as <strong><%= current_user.name %></strong>.
+      <%= link_to 'Edit profile', user_path, :class => 'navbar-link' %> |
+      <%= link_to "Log out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+    <% else %>
+      <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
+      <%= link_to "Log in", new_user_session_path, :class => 'navbar-link'  %>
+    <% end %>
+    </div>
+  </nav>
+</header>
+
+
+   <p class="notice"><%= notice %></p>
+   <p class="alert"><%= alert %></p>
+
 
 <%= yield %>
 
