--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,29 +5,50 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
 </head>
 <body>
-<header>
-  <nav>
-    <div class="title"><a href="/">Dinner Assister</a></div>
-    <% if user_signed_in? %>
-      Logged in as <strong><%= current_user.name %></strong>.
-      <%= link_to 'Edit profile', user_path, :class => 'navbar-link' %> |
-      <%= link_to "Log out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-    <% else %>
-      <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-      <%= link_to "Log in", new_user_session_path, :class => 'navbar-link'  %>
-    <% end %>
+  <header>
+    <nav class="navbar navbar-inverse navbar-static-top">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Dinner Assister</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav nav-main">
+            <li><a href="/">Browse</a></li>
+            <li><a href="/recipes/new">Add Recipe</a></li>
+          </ul>
+          <ul class="nav navbar-nav nav-profile">
+            <% if user_signed_in? %>
+              <li><a href="/user/edit">Hi <%= current_user.name %>!</a></li>
+              <li><a href="/users/sign_out"  rel="nofollow" data-method="delete" >Log out</a></li>
+            <% else %>
+              <li><a href="/users/sign_up">Sign up</a></li>
+              <li><a href="/users/sign_in">Log in</a></li>
+            <% end %>
+          </ul>
+        </div>
+    </nav>
+  </header>
+  <div class="banner">
+    <div class="container">
+      <center><img src="/images/scallop.JPG" width=500></center>
     </div>
-  </nav>
-</header>
+  </div>
 
+  <div class="container">
 
    <p class="notice"><%= notice %></p>
    <p class="alert"><%= alert %></p>
 
 
-<%= yield %>
-
+    <%= yield %>
+  </div>
 </body>
 </html>
