--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -70,3 +70,7 @@ nav a:hover, nav a:focus {
 }
   /*background-color: #1ABC9C;#A2D9B4; #76DACF */
   /*background-color: #009585;*/
+
+.content {
+  background-color: #FFF;
+}
