--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,13 +36,22 @@
         </div>
     </nav>
   </header>
+
   <div class="banner">
-    <div class="container">
-      <center><img src="/images/scallop.JPG" width=500></center>
+    <div class="ci3">
+      <div class="item">
+        <img src="/images/scallop.JPG" alt="...">
+      </div>
+      <div class="item">
+        <img src="/images/scallop.JPG" alt="...">
+      </div>
+      <div class="item">
+        <img src="/images/scallop.JPG" alt="...">
+      </div>
     </div>
   </div>
 
-  <div class="container">
+  <div class="container content">
 
    <p class="notice"><%= notice %></p>
    <p class="alert"><%= alert %></p>
@@ -50,5 +59,10 @@
 
     <%= yield %>
   </div>
+
+  <script type="text/javascript" src="ci3_carousel.js"></script>
+  <script type="text/javascript">
+    $('.ci3').ci3();
+  </script>
 </body>
 </html>
