--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Dinner Assister</a>
+          <a class="navbar-brand" href="/">Dinner Assister</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav nav-main">
@@ -37,32 +37,14 @@
     </nav>
   </header>
 
-  <div class="banner">
-    <div class="ci3">
-      <div class="item">
-        <img src="/images/scallop.JPG" alt="...">
-      </div>
-      <div class="item">
-        <img src="/images/scallop.JPG" alt="...">
-      </div>
-      <div class="item">
-        <img src="/images/scallop.JPG" alt="...">
-      </div>
-    </div>
-  </div>
-
   <div class="container content">
-
-   <p class="notice"><%= notice %></p>
-   <p class="alert"><%= alert %></p>
-
-
+    <% if notice %>
+      <p class="notice"><%= notice %></p>
+    <% end %>
+    <% if alert %>
+      <p class="alert"><%= alert %></p>
+    <% end %>
     <%= yield %>
   </div>
-
-  <script type="text/javascript" src="ci3_carousel.js"></script>
-  <script type="text/javascript">
-    $('.ci3').ci3();
-  </script>
 </body>
 </html>
