--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,3 +1,25 @@
+  <div class="banner">
+    <div class="ci3">
+      <div class="item">
+        <img src="/images/scallop.JPG" alt="...">
+      </div>
+      <div class="item">
+        <img src="/images/scallop.JPG" alt="...">
+      </div>
+      <div class="item">
+        <img src="/images/scallop.JPG" alt="...">
+      </div>
+    </div>
+  </div>
+
+  
+  <div class="container content">
+
+   <p class="notice"><%= notice %></p>
+   <p class="alert"><%= alert %></p>
+
+
+
 
 
 <h1>Listing Recipes</h1>
@@ -38,3 +60,9 @@
 <br>
 
 <%= link_to 'New Recipe', new_recipe_path %>
+
+</div>
+  <script type="text/javascript" src="ci3_carousel.js"></script>
+  <script type="text/javascript">
+    $('.ci3').ci3();
+  </script>
