--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,40 +1,58 @@
-<%= image_tag @recipe.photo.url(:medium) %>
-
-<p>
-  <strong>Name:</strong>
-  <%= @recipe.name %>
-</p>
-
-<ul>
-<% @recipe.ingredients.each do |ingredient| %>
-  <li><%= ingredient.name %></li>
-<% end %>
-</ul>
-
-<p>
-  <strong>Direction:</strong>
-  <%= @recipe.directions %>
-</p>
-
-<p>
-  <strong>Prep time:</strong>
-  <%= @recipe.prep_time %>
-</p>
-
-<p>
-  <strong>Cook time:</strong>
-  <%= @recipe.cook_time %>
-</p>
-
-<p>
-  <strong>Source url:</strong>
-  <%= @recipe.source_url %>
-</p>
-
-<p>
-  <strong>Serving:</strong>
-  <%= @recipe.serving %>
-</p>
-
-<%= link_to 'Edit', edit_recipe_path(@recipe) %> |
-<%= link_to 'Back', recipes_path %>
+<div class="recipe">
+  <h1>
+    <%= @recipe.name %>
+  </h1>
+  <div class="row">
+    <div class="col-sm-8">
+      <%= image_tag @recipe.photo.url(:medium) %>
+    </div>
+    <div class="col-sm-4">
+      <div class="recipe-label">
+        Prep time:
+      </div>
+      <div class="recipe-value">
+        <%= @recipe.prep_time %>
+      </div>
+      <div class="recipe-label">
+        Cook time:
+      </div>
+      <div class="recipe-value">
+        <%= @recipe.cook_time %>
+      </div>
+      <div class="recipe-label">
+        Serving:
+      </div>
+      <div class="recipe-value">
+        <%= @recipe.serving %>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4">
+      <div class="recipe-label">
+        Ingredients
+      </div>
+      <div class="recipe-value">
+      <ul>
+      <% @recipe.ingredients.each do |ingredient| %>
+        <li><%= ingredient.name %></li>
+      <% end %>
+      </ul>
+      </div>
+    </div>
+    <div class="col-sm-8">
+      <div class="recipe-label">
+        Direction:
+      </div>
+      <div class="recipe-value">
+        <%= @recipe.directions %>
+      </div>
+    </div>
+  </div>
+  <div class="row col-sm-12">
+    <a href="<%= @recipe.source_url %>">Source</a>
+  </div>
+  <div class="btn btn-primary">
+      <%= link_to 'Edit', edit_recipe_path(@recipe) %>
+  </div>
+</div>
