--- a/app/assets/stylesheets/recipe.scss
+++ b/app/assets/stylesheets/recipe.scss
@@ -27,7 +27,8 @@
     button {
       max-width: 200px;
       margin: 1em;
-      margin-left: 0;      
+      margin-left: 0;
+      font-size: 1em;      
     }
   }
 
@@ -57,5 +58,28 @@
 
   ul {
     padding-left: 1em;
+  }
+
+  .form-photo {
+    padding: 1em;
+    text-align: center;
+    input {
+      border: 0px;
+      display: block;
+    }
+
+    i {
+      position: absolute;
+      right: 1em;
+      color: #FF0000;
+      opacity: 0.8;
+    }
+
+    img {
+      width: auto;
+      max-width: 95%;
+      height: 250px;
+      border: 0;
+    }
   }
 }
