--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -18,10 +18,6 @@
    <p class="notice"><%= notice %></p>
    <p class="alert"><%= alert %></p>
 
-
-
-
-
 <h1>Listing Recipes</h1>
 
 <table>
@@ -62,7 +58,8 @@
 <%= link_to 'New Recipe', new_recipe_path %>
 
 </div>
-  <script type="text/javascript" src="ci3_carousel.js"></script>
+  <!-- // <script type="text/javascript" src="ci3_carousel.js"></script> -->
+  <%= javascript_include_tag "ci3_carousel" %> 
   <script type="text/javascript">
     $('.ci3').ci3();
   </script>
