--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -45,7 +45,7 @@
         Direction:
       </div>
       <div class="recipe-value">
-        <%= @recipe.directions %>
+        <%= simple_format(@recipe.directions) %>
       </div>
     </div>
   </div>
