added new pictures to banner

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,13 +1,64 @@
   <div class="banner">
     <div class="ci3">
       <div class="item">
-        <img src="/images/scallop.JPG" alt="...">
+        <div class="banner-text">
+          Photo by <a href="https://www.flickr.com/photos/chiemseehotel/15174190181" targer="_blank">Anna</a>
+        </div>
+        <img src="/images/bread.jpg">
       </div>
       <div class="item">
-        <img src="/images/scallop.JPG" alt="...">
+        <div class="banner-text">
+          Photo by <a href="https://www.flickr.com/photos/chiemseehotel/14990632807" targer="_blank">Anna</a>
+        </div>
+        <img src="/images/cake.jpg">
       </div>
       <div class="item">
-        <img src="/images/scallop.JPG" alt="...">
+        <div class="banner-text">
+          Photo by <a href="https://www.flickr.com/photos/sweetonveg/7244404448/" targer="_blank">Jennifer</a>
+        </div>
+        <img src="/images/pasta.jpg">
+      </div>
+      <div class="item">
+        <div class="banner-text">
+          Photo by <a href="https://www.flickr.com/photos/sweetonveg/8078817046/" targer="_blank">Jennifer</a>
+        </div>
+        <img src="/images/chillie.jpg">
+      </div>
+      <div class="item">
+        <div class="banner-text">
+          Photo by <a href="https://www.flickr.com/photos/sweetonveg/6933047123/" targer="_blank">Jennifer</a>
+        </div>
+        <img src="/images/curry.jpg">
+      </div>
+      <div class="item">
+        <div class="banner-text">
+          Photo by <a href="https://www.flickr.com/photos/sweetonveg/6750034613/" targer="_blank">Jennifer</a>
+        </div>
+        <img src="/images/chickpea.jpg">
+      </div>
+      <div class="item">
+        <div class="banner-text">
+          Photo by <a href="https://www.flickr.com/photos/sweetonveg/4145699588/" targer="_blank">Jennifer</a>
+        </div>
+        <img src="/images/sushi.jpg">
+      </div>
+      <div class="item">
+        <div class="banner-text">
+          Photo by <a href="https://www.flickr.com/photos/sweetonveg/4600354370/" targer="_blank">Jennifer</a>
+        </div>
+        <img src="/images/burger.jpg">
+      </div>
+      <div class="item">
+        <div class="banner-text">
+          Photo by <a href="https://www.flickr.com/photos/sweetonveg/4907977592/" targer="_blank">Jennifer</a>
+        </div>
+        <img src="/imagesspring_roll.jpg">
+      </div>
+      <div class="item">
+        <div class="banner-text">
+          Photo by <a href="https://www.flickr.com/photos/sweetonveg/5039444393/" targer="_blank">Jennifer</a>
+        </div>
+        <img src="/images/salad.jpg">
       </div>
     </div>
   </div>
