--- a/app/assets/stylesheets/ci3.css
+++ b/app/assets/stylesheets/ci3.css
@@ -2,17 +2,33 @@
   position: relative;
   margin: auto;
   width: 90%;
-  height: 480px;
+  height: 500px;
 }
 
 .ci3 img {
   width: 700px;
+  height: 500px;
   border: 10px #FFF solid;
 }
 
 .ci3 .item {
   display: none;
   transition: left 0.6s ease-in-out 0s;
+}
+
+.ci3 .banner-text {
+  display: none;
+}
+
+.ci3 .active .banner-text {
+  background-color: #FFF;
+  padding: 5px;
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
+  opacity: 0.7;
+  text-align: center;
+  display: block;
 }
 
 .ci3 .active, .ci3 .prev, .ci3 .next {
