--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,5 +1,6 @@
+<% content_for :banner do %>
   <div class="banner">
-    <div class="ci3">
+    <div class="ci3 container">
       <div class="item">
         <div class="banner-text">
           Photo by <a href="https://www.flickr.com/photos/chiemseehotel/15174190181" targer="_blank">Anna</a>
@@ -52,7 +53,7 @@
         <div class="banner-text">
           Photo by <a href="https://www.flickr.com/photos/sweetonveg/4907977592/" targer="_blank">Jennifer</a>
         </div>
-        <img src="/imagesspring_roll.jpg">
+        <img src="/images/spring_roll.jpg">
       </div>
       <div class="item">
         <div class="banner-text">
@@ -62,6 +63,7 @@
       </div>
     </div>
   </div>
+<% end %>
 
   
   <div class="container content">
