--- a/app/assets/stylesheets/recipe.scss
+++ b/app/assets/stylesheets/recipe.scss
@@ -1,9 +1,21 @@
+@import "_colors";
+
+.banner {
+  background-color: $secondary-color;
+  background-image: linear-gradient($secondary-color, #50DEBD);
+  padding: 20px;
+
+  img {
+    border: 10px solid $white;
+  }
+}
+
 .recipe {
   line-height: 1.7em;
 
   input {
     border: 0px;
-    border-bottom: 1px solid #DDD;
+    border-bottom: 1px solid $light-gray;
     padding-top: 0.3em;
     width: 100%;
   }
@@ -44,7 +56,7 @@
 
   img {
     width: 100%;
-    border: 1px solid #DDD;
+    border: 1px solid $light-gray;
   }
 
   .row {
@@ -52,7 +64,7 @@
   }
 
   h1 {
-    color: #009477;
+    color: $secondary-dark-color;
     font-size: 5em;
   }
 
