--- a/app/assets/stylesheets/recipe.scss
+++ b/app/assets/stylesheets/recipe.scss
@@ -13,7 +13,7 @@
 .recipe {
   line-height: 1.7em;
 
-  input {
+  input, select {
     border: 0px;
     border-bottom: 1px solid $light-gray;
     padding-top: 0.3em;
