--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,6 +1,5 @@
 <% content_for :header do %>
-  <link href="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css" rel="stylesheet" />
-  <script src="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>
+  <script src="/assets/javascripts/typeahead.bundle.min.js"></script>
 <% end %>
 
 <div class="recipe">
@@ -104,12 +103,6 @@
       bindRecipeEvents(elements);
     });
 
-  $("#recipe-tags").select2({
-      ajax: {
-        url: "http://localhost:3000/system/recipes/tags.json",
-        cache: "true"
-      }
-    });
      
   </script>
 </div>
