--- a/app/assets/stylesheets/recipe.scss
+++ b/app/assets/stylesheets/recipe.scss
@@ -80,10 +80,11 @@
       display: block;
     }
 
-    i {
+    .icon {
       position: absolute;
       right: 1em;
-      color: #FF0000;
+      top: .5em;
+      color: $light-gray;
       opacity: 0.8;
     }
 
@@ -95,5 +96,29 @@
     }
   }
 
+  .recipe_tags {
+    display: block;
+    min-height: 150px;
+    list-style: none;
+
+    .tag {
+      cursor: default;
+      width: auto;
+    }
+
+    li {
+      display: inline-block;
+      margin: 1em;
+      background-color: $light-gray;
+      border-radius: 6px;
+      margin: 5px;
+      padding: 5px;
+      padding-right: 10px;
+      padding-left: 7px;
+      input {
+        background-color: $light-gray;
+      }
+    }
+  }
   
 }
