--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -12,6 +12,7 @@ body {
   background-color: $white;
   color: $dark-gray;
   font-family: 'Georgia', serif, 'Arial';
+  font-size: 16px;
 }
 
 @media (min-width: 768px) {
@@ -80,16 +81,18 @@ input::-webkit-inner-spin-button {
 
 button, .btn {
   border: 1px solid $mid-gray;
-  background-color: #EFEFEF;
-  font-weight: 550;
-  color: $primary-color;
+  background-color: $light-gray;
+  color: $dark-gray;
   margin: .5em;
-  width: 70%;
+  width: 50%;
   font-size: 1.3em;
 
   a {
     text-decoration: none;
-    color: $primary-color;
+  }
+
+  a:hover {
+    color: $primary-color;  
   }
 }
 
