--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -50,7 +50,7 @@
     <div class="field recipe-form-photos row">
       <%= f.fields_for :photos do |photo| %>
         <div class="form-photo col-sm-4">
-          <i class="fa fa-trash fa-3x delete-photo"></i>
+          <i class="icon fa fa-trash fa-3x delete-photo"></i>
           <%= image_tag photo.object.photo.url(:small) %>
           <%= photo.hidden_field :_destroy, value: "false", 
                                   class: "delete-photo-field" %>
@@ -70,26 +70,61 @@
       <%= f.text_field :source_url %>
     </div>
 
+    <div class="field recipe_tags">
+        <label>Tags</label>
+        <ul id="tag_list">
+          <% @recipe.tags.each do |tag| %>
+            <li class="tag">
+              <span class="delete_icon glyphicon glyphicon-remove" aria-hidden="true"></span>
+              <span><%= sanitize tag.name %></span>
+              <input value="<%= tag.name %>" name="tags[]" type="hidden"></input>
+            </li>
+          <% end %>
+        </ul>
+
+      <input id="recipe_tags_input" class="typeahead" type="text" placeholder="Add tags" autocomplete="off">
+    </div>
+
     <div class="row">
       <div class="col-sm-6">
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="button" class="btn" onclick="window.history.go(-1); return false;" >Cancel</button>
       </div>
       <div class="col-sm-6">
-        <button type="button" class="btn" onclick="window.history.go(-1); return false;" >Cancel</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
       </div>
     </div>
   <% end %>
 
-  <script type="text/javascript">
-    $( document ).ready(function() {
+  <script id="tag_template" type="x-tmpl-mustache">
+    <li class="tag">
+      <span class="delete_icon glyphicon glyphicon-remove" aria-hidden="true"></span>
+      <span>{{name}}</span>
+      <input value="{{name}}" name="tags[]" type="hidden"></input>
+    </li>
+  </script>
+
+  <script id="ingredient_template" type="x-tmpl-mustache">
+    <input type="text" autocomplete=off name="recipe[ingredients_attributes][{{index}}][name]" id="recipe_ingredients_attributes_{{index}}_name">
+  </script>
+
+  <script type="text/javascript"> 
+    var bindElements = function () {
       var elements = {'delete_elements': '.delete-photo',
                       'delete_photo_field': '.delete-photo-field',
                       'ingredient_list': '#ingredient_list',
                       'add_ingredient': '#add_ingredient_button',
-                      'focus_next': '.recipe input'
+                      'ingredient_template': '#ingredient_template',
+                      'focus_next': '.recipe input',
+                      'tag_input': '#recipe_tags_input',
+                      'tag_list': '#tag_list',
+                      'tag_delete_fields': '.tag .delete_icon',
+                      'tag_template': '#tag_template',
+                      'tag_names': <%= raw @tag_names %>
                     }
       bindRecipeEvents(elements);
-    });
+    }
+
+  $(document).ready(bindElements);
 
   </script>
 </div>
