--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,10 +1,9 @@
-<h2>Create Account</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<h1>Create Account:</h1>
+<%= form_for(@user, url: registration_path(:user)) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.text_field :name, autofocus: true, placeholder: "What should we call you?"%>
+    <%= f.text_field :name, autofocus: true, placeholder: "Name/Nickname"%>
   </div>
   <div class="field">
     <%= f.email_field :email, placeholder: "Email" %>
@@ -15,9 +14,12 @@
   <div class="field">
     <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "Confirm Password"%>
   </div>
-  <div class="actions">
+  <div class="field">
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<ul>
+  <li><a href="/users/sign_in">Log in</a></li>
+  <li><a href="/users/unlock/new">Resend unlock instructions</a></li>
+</ul>
