--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,8 +30,8 @@
               <li><a href="/user/edit">Hi <%= current_user.name %>!</a></li>
               <li><a href="/users/sign_out"  rel="nofollow" data-method="delete" >Log out</a></li>
             <% else %>
-              <li><a href="/users/sign_up">Sign up</a></li>
-              <li><a href="/users/sign_in">Log in</a></li>
+              <li><a href="/users/sign_up" data-no-turbolink="true">Sign up</a></li>
+              <li><a href="/users/sign_in" data-no-turbolink="true">Log in</a></li>
             <% end %>
           </ul>
         </div>
@@ -49,5 +49,17 @@
     <% end %>
     <%= yield %>
   </div>
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-65070010-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
 </body>
+
 </html>
