--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,5 +8,4 @@
   <%= @user.email %>
 </p>
 
-
-<%= link_to 'Edit', user_edit_path(@user) %>
+<%= link_to 'Edit', user_edit_path(@user), class: "btn btn_primary" %>
