Update colors to brown and green

--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -1,7 +1,9 @@
-$primary-color: #FF4618;
-$secondary-color: #1ABC9C;
-$secondary-dark-color: #009477;
+$primary-color: #58940C;
+$light-primary-color: #F0FFD7;
+$secondary-color: #FB5F1C;
+$secondary-dark-color: #4f3f35;
 $dark-gray: #333;
-$mid-gray: #AAAAAA;
-$light-gray: #DDD;
-$white: #FEFEFE;
+$gray: #CFCFCF;
+$light-gray: #EDEDED;
+$white: #FFFFFB;
+$background: #F6F6EC;
