--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -10,7 +10,7 @@
   <%= stylesheet_link_tag 'registration' %>
 </head>
 <body>
-  <div class="registration container">
+  <div class="registration content container">
     <div class="title">
       <a href="/" data-no-turbolink="true">Dinner Assister</a>
     </div>
