--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -90,7 +90,7 @@
         <button type="button" class="btn" onclick="window.history.go(-1); return false;" >Cancel</button>
       </div>
       <div class="col-sm-6">
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn_primary">Submit</button>
       </div>
     </div>
   <% end %>
