Create howto page

--- a/app/assets/stylesheets/recipe.scss
+++ b/app/assets/stylesheets/recipe.scss
@@ -112,7 +112,7 @@
     li {
       display: inline-block;
       margin: 1em;
-      background-color: $light-gray;
+      background-color: $white;
       border-radius: 6px;
       margin: 5px;
       padding: 5px;
