--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,16 +1,5 @@
 @import "_colors";
 
-
-
-/*
-orange: #FB5F1C;
-red: #a82d1c;
-brown: 4f3f35;
-#623621
-
-  background-color: #623621;
-  background-image: linear-gradient(#a82d1c, $secondary-color);
-*/
 html {
     height: 100%;
 }
@@ -168,16 +157,6 @@ ul {
   }
 }
 
-.circle {
-  border: 3px solid $dark-gray;
-  border-radius: 50%;
-  color: $dark-gray;
-  display: block;
-  font-size: 1.7rem;
-  font-weight: 600;
-  height: 3.2rem;
-  line-height: 1.7em;
-  margin: 0px auto 1rem;
-  text-align: center;
-  width: 3.2rem;
+hr {
+  border-bottom: 1px solid $white;
 }
