Added facebook sign in back

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -160,3 +160,16 @@ ul {
 hr {
   border-bottom: 1px solid $white;
 }
+
+/* Social media colors */
+.facebook {
+  color: #3a5795
+}
+
+.twitter {
+  color: #00aced;
+}
+
+.google {
+  color: #dd4b39;
+}
