--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -16,8 +16,9 @@
     </div>
     <h1>Log in with:</h1>
     <div class="social_icons">
-      <a id="google_sign_in" href="/users/auth/google_oauth2"><i class="fa fa-google-plus-square"></i></a>
-      <a id="twitter_sign_in" href="/users/auth/twitter"><i class="fa fa-twitter-square"></i></a>
+      <a id="google_sign_in" href="/users/auth/google_oauth2"><i class="fa fa-google-plus-square google"></i></a>
+      <a id="twitter_sign_in" href="/users/auth/twitter"><i class="fa fa-twitter-square twitter"></i></a>
+      <a id="facebook_sign_in" href="/users/auth/facebook"><i class="fa fa-facebook-square facebook"></i></a>
     </div>
 
     <% if notice %>
